--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,53 @@
-HELP.md
+# Compiled class files
+*.class
+
+# Log files
+*.log
+log/
+
+# Package files
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Build artifacts
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+.gradle/
+out/ # Para projetos IntelliJ IDEA
 
-### VS Code ###
+# Configuration files
+src/main/resources/application.properties
+# Se usar YAML, adicione:
+# src/main/resources/application.yml
+# src/main/resources/application-*.properties
+# src/main/resources/application-*.yml
+
+# IDE specific files
+.idea/
 .vscode/
+*.iml
+.project
+.classpath
+.settings/
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Maven
+.mvn/wrapper/maven-wrapper.jar
+
+# Gradle
+.gradle/
+build/
+.project
+.classpath
+.settings/
+*.log
+!gradle-wrapper.jar
+.apt_generated/
+.factorypath
