--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.project</groupId>
+	<groupId>com.poject</groupId>
 	<artifactId>Ipubly</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Ipubly</name>
@@ -35,6 +35,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>6.5.0</version>
+		</dependency>
 	
 
 <dependency>
@@ -43,6 +49,16 @@
     <version>4.5.13</version>
 </dependency>
 
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.5.0</version>
+		</dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-validation</artifactId>
+		<version>3.4.5</version>
+	</dependency>
 		<dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
